--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,54 @@
-# Geovisualization
+import Image from "next/image";
+import Link from "next/link";
+import styles from "../styles/page.module.css";
+import { ArrowRightIcon } from "@heroicons/react/20/solid";
 
-This is my portfolio for the Geovisualization course at the University of Trier. Here you can find all the projects I have worked on during the semester.
+export default function IndexPage() {
+  return (
+    <div className="home-content">
+      <div className="content-container">
+        <h1 className="headline">Geovisualization - WS 2024/25</h1>
+        <p className="subtitle">
+          Portfolio website for the course 'Geovisualization' from the department of 
+          <br className="max-md:hidden" /> 
+          Geoinformatics at the University of Trier. 
+          <br className="max-md:hidden" />
+          <br className="max-md:hidden" /> 
+          <span className="font-bold">Author:</span> Fabian Schumacher
+          <br className="max-md:hidden" /> 
+          <span className="font-bold">Lecturer:</span> Dr. Andreas Müller{" "}
+        </p>
+        <p className="subtitle">
+          <Link className={styles.cta} href="/portfolio/introduction">
+            <span>Get started</span>
+            <span>
+              <ArrowRightIcon className="h-3 w-3 ml-2" />
+            </span>
+          </Link>
+        </p>
+      </div>
+      <div className="features-container x:border-b nextra-border">
+        <div className="content-container">
+          <div className="container relative max-w-screen-2xl items-center">
+            <div className="w-full">
+              <div className="relative flex justify-around h-full w-full">
+                <div className="w-full h-full">
+                  <Image
+                    src="/satellite-imagery-1.jpg"
+                    alt="Satellite image"
+                    className="static object-cover w-full h-full rounded-3xl"
+                    // fill={true}
+                    priority={true}
+                    width={7292}
+                    height={7292}
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+);
+}
