--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -34,7 +34,7 @@ export default function IndexPage() {
               <div className="relative flex justify-around h-full w-full">
                 <div className="w-full h-full">
                   <Image
-                    src="/satellite-imagery-1.jpg"
+                    src="/satellite-imagery.jpg"
                     alt="Satellite image"
                     className="static object-cover w-full h-full rounded-3xl"
                     // fill={true}
