--- a/pages/portfolio/tools/arcgis.mdx
+++ b/pages/portfolio/tools/arcgis.mdx
@@ -1,1 +1,35 @@
-# ArcGIS
+<img src="/geovis-portfolio/portfolio/tools/ArcGIS/ArcGIS-Pro-logo.png" align="right" width="60px" alt="ArcGIS Pro logo"/>
+# ArcGIS Pro
+
+ArcGIS Pro is a **commercial** desktop Geographic Information System (GIS) software developed by Esri that **requires a paid license**.
+It provides advanced tools for spatial data analysis, 3D visualization, geoprocessing, and cartography. 
+ArcGIS Pro supports seamless integration with Esri’s cloud-based GIS platform, ArcGIS Online, and enterprise solutions. 
+It allows users to manage, analyze, and visualize geospatial data using a modern ribbon-based interface, multi-threading for 
+faster processing, and support for Python automation (ArcPy). Key features include 3D mapping, machine learning tools, 
+geostatistical analysis, and integration with big data and remote sensing platforms. It is widely used in industries such as 
+urban planning, environmental science, disaster management, and business intelligence.
+
+ArcGIS Pro is excellent for geovisualization due to its powerful rendering engine, advanced cartographic tools, and seamless integration with Esri’s ecosystem. Here’s why it stands out:  
+
+1. **High-Performance 2D & 3D Visualization** – ArcGIS Pro supports real-time rendering of both **2D and 3D** data, allowing users to create dynamic and interactive maps, including **terrain models, extruded buildings, and fly-through animations**.  
+
+2. **Advanced Symbology & Labeling** – It offers highly customizable **symbolization, transparency effects, and labeling**, including **realistic 3D symbology** for enhanced cartographic presentation.  
+
+3. **Animation & Time-Series Mapping** – Users can create **animated maps** to visualize temporal data changes over time, making it ideal for weather patterns, urban growth, and environmental changes.  
+
+4. **Multi-Scale Cartography** – ArcGIS Pro allows users to create maps that adapt **dynamically across scales**, ensuring clarity at different zoom levels.  
+
+5. **Deep Integration with Remote Sensing & AI** – With **deep learning tools** and access to satellite imagery, ArcGIS Pro enables **real-time remote sensing visualization and AI-powered geospatial analytics**.  
+
+6. **Augmented Reality (AR) & Virtual Reality (VR) Support** – Esri provides support for **immersive 3D geovisualization**, useful for urban planning, disaster response, and infrastructure modeling.  
+
+7. **Cloud & Web Integration** – Maps and geovisualizations can be **seamlessly published to ArcGIS Online or ArcGIS Enterprise**, enabling **interactive web maps, dashboards, and story maps**.  
+
+8. **Python (ArcPy) & Automation** – Users can automate complex geovisualization workflows using **Python scripting** to enhance efficiency.  
+
+9. **Professional-Quality Map Layouts** – The **Layout View** provides tools for creating high-quality **print and digital maps**, complete with legends, scale bars, and annotations.  
+
+
+### Graphical User Interface (GUI)
+
+![ArcGIS Pro GUI](/portfolio/tools/ArcGIS/ArcGIS-Pro-GUI.jpg)
