--- a/pages/portfolio/tools/comparison.mdx
+++ b/pages/portfolio/tools/comparison.mdx
@@ -1,1 +1,21 @@
 # Comparing QGIS and ArcGIS
+
+| **Feature**              | **QGIS 🟢 (Open-Source)** | **ArcGIS Pro 🔵 (Commercial)** |
+|-------------------------|----------------|----------------|
+| **🗺️ 2D Visualization**    | Excellent cartographic tools with customizable symbology, labeling, and styling | Advanced 2D mapping with professional-grade symbology, annotation, and high-performance rendering |
+| **🌍 3D Visualization**    | Basic 3D support via **3D Map View** (still developing) | Full **3D scene viewer** with extrusion, volumetric rendering, and animations |
+| **⚡ Rendering Performance** | Good, but may slow down with large datasets | Optimized for high-performance rendering, handles big data efficiently |
+| **🎨 Symbolization**       | Rule-based, categorized, and heatmap symbology | More advanced **3D models, effects, and vector tile styling** |
+| **🔤 Labeling & Annotation** | Customizable labels, expression-based styling | Advanced **annotation layers, leader lines, and curved text** |
+| **⏳ Time-Series Visualization** | **TimeManager Plugin** allows animated maps | Built-in **animation tools** for smooth time-series visualization |
+| **🔍 Multi-Scale Mapping** | Scale-dependent rendering & labeling (manual setup) | **Automated** multi-scale mapping and generalization |
+| **🎥 3D Animation & Flythroughs** | Limited, needs plugins | **Full 3D animation tools** for flythroughs & cinematic visualizations |
+| **🕶️ AR/VR Support** | Limited via plugins | **Augmented Reality (AR) & Virtual Reality (VR) support** |
+| **🛰️ Remote Sensing & Raster** | Good raster support (**GRASS, GDAL**) with styling (hillshade, elevation) | **Real-time raster processing, deep learning & AI integration** |
+| **🌐 Web & Interactive Maps** | Supports **QGIS2Web, Leaflet, OpenLayers** | **Seamless integration with ArcGIS Online, Story Maps, and dashboards** |
+| **🤖 Customization & Automation** | **Python (PyQGIS)** and plugins for custom visualizations | **Python (ArcPy), ModelBuilder, AI-enhanced workflows** |
+| **📄 Export & Layouts** | Good **print layouts**, but lacks automation for multi-scale maps | **Professional-quality layouts, automated map series, high-res exports** |
+
+### Key Takeaways for Geovisualization:
+- **QGIS** is excellent for **flexible, open-source visualization**, especially for 2D mapping and styling. However, **3D and animation features are more limited** and require plugins.  
+- **ArcGIS Pro** offers a **more advanced, polished, and high-performance geovisualization environment**, especially for **3D mapping, animations, and interactive web integration**.  
