--- a/pages/portfolio/tools/qgis.mdx
+++ b/pages/portfolio/tools/qgis.mdx
@@ -1,1 +1,32 @@
+<img src="/geovis-portfolio/portfolio/tools/QGIS/QGIS-logo.png" align="right" width="60px" alt="QGIS logo"/>
 # QGIS
+
+QGIS (Quantum GIS) is a **free and open-source** Geographic Information System (GIS) used
+for viewing, editing, analyzing, and visualizing spatial data. It supports a wide range of 
+vector, raster, and database formats and provides tools for cartography, geoprocessing, 
+spatial analysis, and remote sensing. QGIS is highly extensible with plugins and 
+integrates well with other GIS software like GRASS GIS and PostGIS. It is widely used in 
+environmental science, urban planning, geoinformatics, and many other fields.
+
+QGIS is great for geovisualization because of its flexibility, extensive toolset, and support for various data formats. Here’s why it stands out:  
+
+1. **Wide Format Support** – QGIS can handle raster, vector, and database formats (e.g., GeoTIFF, Shapefiles, PostGIS, WMS, and WMTS), making it easy to integrate diverse spatial datasets.  
+
+2. **Customizable Map Styling** – Users can create detailed maps with symbolization, labeling, transparency settings, and rule-based styling for better data representation.  
+
+3. **Dynamic Layering** – Multiple layers can be combined and styled dynamically, with real-time updates and filtering options.  
+
+4. **3D Visualization** – QGIS has built-in support for 3D visualization, allowing users to render terrain and extrude features for better spatial understanding.  
+
+5. **Time-Based Visualization** – With plugins like **TimeManager**, users can animate temporal data, making it ideal for time-series geospatial analysis.  
+
+6. **Plugins and Extensions** – QGIS has a strong plugin ecosystem that enhances its geovisualization capabilities, such as **QGIS2Web** for web maps or **QGIS Globe** for 3D visualization.  
+
+7. **Integration with Python (PyQGIS)** – Users can automate and customize geovisualization workflows with Python scripting.  
+
+8. **Print Composer & Layouts** – High-quality map layouts can be created for reports, including legends, scale bars, and annotations.  
+
+
+### Graphical User Interface (GUI)
+
+![QGIS logo](/portfolio/tools/QGIS/QGIS-GUI.png)
