--- a/pages/portfolio/projects/flood.mdx
+++ b/pages/portfolio/projects/flood.mdx
@@ -2,9 +2,9 @@
 
 ## Introduction and Overview
 Here you shoul insert the static overview map for the flood project and the interactive web map with normal water level (Week 7).
-![IKEA Accessibility Halle/Leipzig](/portfolio/projects/flood/Moselle-by-Trier.png)
+![Moselle by Trier](/portfolio/projects/flood/Moselle-by-Trier.png)
 
 ## 
 
 <script type="module" src="https://js.arcgis.com/embeddable-components/4.32/arcgis-embeddable-components.esm.js"></script>
- <arcgis-embedded-map style={{height:600 + 'px'}} item-id="c3199b9d42e74da8b1eca5acd2b56277" theme="light" heading-enabled legend-enabled information-enabled share-enabled portal-url="https://zimk-uni-trier.maps.arcgis.com" ></arcgis-embedded-map>
+<arcgis-embedded-map style={{height:600 + 'px'}} item-id="c3199b9d42e74da8b1eca5acd2b56277" theme="light" heading-enabled legend-enabled information-enabled share-enabled portal-url="https://zimk-uni-trier.maps.arcgis.com" ></arcgis-embedded-map>
