finish example maps

--- a/pages/portfolio/tools/examples.mdx
+++ b/pages/portfolio/tools/examples.mdx
@@ -66,5 +66,12 @@ The second map visualizes the accessibility of for the IKEA store of Halle/Leipz
 ## Week 7
 
 ### Create and visualize a DEM
+![DEM Visualizations](/portfolio/tools/Examples/w7/dem_contours_aspect_slope.png)
 
 ### Create 3D-Buildings
+
+<iframe
+  src="/geovis-portfolio/portfolio/tools/Examples/w7/3D_web_map_trier/index.html"
+  width="100%"
+  height="500"
+/>
